--- a/.gitignore
+++ b/.gitignore
@@ -1,8 +1,5 @@
-# Binaries for programs and plugins
-*.exe
-*.dll
-*.so
-*.dylib
+Jewtbrains goland stuff
+.idea/
 
 # Test binary, build with `go test -c`
 *.test
@@ -12,3 +9,4 @@
 
 # Project-local glide cache, RE: https://github.com/Masterminds/glide/issues/736
 .glide/
+/.idea/vcs.xml
